updated index file

--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <h1>Welcome to Azure Yoga</h1>
-  <p>Balance your body and mind.</p>
+  <h1>Welcome to SuViHaSa Yoga</h1>
+  <p>a haven for those seeking wellness, balanced living, inner peace, and a joyful life." "where wellness, healthy lifestyle, tranquility, and joyful living come together." "At SuViHaSa Yoga, we guide you toward wellness, mindful health, serene peace, and a life filled with joy."</p>
 </body>
 </html>
