updated index file

--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
   <h1>Welcome to SuViHaSa Yoga</h1>
-  <p>a haven for those seeking wellness, balanced living, inner peace, and a joyful life." "where wellness, healthy lifestyle, tranquility, and joyful living come together." "At SuViHaSa Yoga, we guide you toward wellness, mindful health, serene peace, and a life filled with joy."</p>
+  <p>A haven for those seeking wellness, balanced living, inner peace, and a joyful life.</p>
+  <p>Where wellness, healthy lifestyle, tranquility, and joyful living come together.</p>   
+  <p>Where wellness, healthy lifestyle, tranquility, and joyful living come together.</p>
+  <p>At SuViHaSa Yoga, we guide you toward wellness, mindful health, serene peace, and a life filled with joy.</p>
 </body>
 </html>
