--- a/views/index.html
+++ b/views/index.html
@@ -6,9 +6,7 @@
 </head>
 <body>
   <h1>Welcome to SuViHaSa Yoga</h1>
-  <p>A haven for those seeking wellness, balanced living, inner peace, and a joyful life.</p>
-  <p>Where wellness, healthy lifestyle, tranquility, and joyful living come together.</p>   
-  <p>Where wellness, healthy lifestyle, tranquility, and joyful living come together.</p>
-  <p>At SuViHaSa Yoga, we guide you toward wellness, mindful health, serene peace, and a life filled with joy.</p>
-</body>
+  <p>we believe that balance isn't just a goal — it's a way of living. Whether you're a curious beginner or a seasoned yogi, our platform is designed to guide your practice with purpose, mindfulness, and ease</p>
+  <p>We blend tradition with technology to bring yoga to your screen, anytime and anywhere. Find your flow. Breathe. Become.</p>   
+  </body>
 </html>
