--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,7 @@ body {
   background-size: cover;
   text-align: center;
   padding: 4rem 2rem;
-  color: rgb(255, 255, 255);
+  color: black;
 }
 
 .cta-button {
