--- a/public/style.css
+++ b/public/style.css
@@ -17,7 +17,7 @@ body {
   position: absolute;
   top: 0; left: 0;
   width: 100%; height: 100%;
-  background: black; /* light overlay */
+  background: white; /* light overlay */
   z-index: 0;
 }
 
