--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ body {
 
 .hero {
   background-image: url('/images/urdwanamaskar.jpg');
-  background-size: cover;
+  background-size: max(100%, 100%);
   text-align: calc();
   padding: 4rem 2rem;
   color: black;
