--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .hero {
-  background-image: url('/images/yoga-hero.jpg');
+  background-image: url('/images/warrior.jpg');
   background-size: cover;
   text-align: center;
   padding: 4rem 2rem;
