--- a/public/style.css
+++ b/public/style.css
@@ -92,7 +92,7 @@ video {
 .instructors-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: end;
+  justify-content: center;
   gap: 2rem;
   padding: 2rem;
 }
@@ -108,8 +108,8 @@ video {
 
 .instructor-card img {
   border-radius: 50%;
-  width: 12px;
-  height: 12px;
+  width: 120px;
+  height: 120px;
   object-fit: cover;
   margin-bottom: 1rem;
 }
