--- a/public/style.css
+++ b/public/style.css
@@ -5,13 +5,13 @@ body {
   color: #333;
 }
 
-.hero {
+/*.hero {
   background-image: url('/images/yoga-hero.jpg');
   background-size: cover;
   text-align: top;
   padding: 4rem 2rem;
   color: black;
-}
+}*/
 
 .cta-button {
   background: #2e8b57;
