--- a/public/style.css
+++ b/public/style.css
@@ -134,15 +134,15 @@ video {
   color: #0078D4; /* Azure blue */
 }
 .full-image-section {
-  width: 60%;
+  width: 100%;
   margin: 0;
   padding: 0;
   text-align: center;
 }
 
 .full-image-section img {
-  width: 100%;
-  height: 40%;
+  width: 60%;
+  height: auto%;
   display: block;
 }
 
